# Gross-2-Salary

./: .dockerignore  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/workflows/: build-deploy.yaml  ci-cd.yml
docker/: backend.Dockerfile  frontend.Dockerfile
src/: pyproject.toml
src/cat/api/: dependencies.py  main.py
src/cat/api/routers/: net_ease.py
src/cat/common/config/: base.py
src/cat/core/net_ease/: constants.py  dto.py  entities.py  services.py
tests/core/net_ease/: test_services.py
tests/data_test/: data_test_gross_net.xlsx
